<resources>
    <string name="app_name">My Application</string>
    <string name="tagline">tagline</string>
    <string name="let_s_connect">Let\'s Connect</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="roll_in">Let\'s Roll IN</string>
    <string name="username">\ \ Family ID</string>
    <string name="welcome">WELCOME</string>

</resources>