<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity12">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="178dp"
        android:contentDescription="@string/logo"
        android:transitionName="logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        app:srcCompat="@drawable/ds" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audiowide"
        android:text="@string/welcome_back"
        android:textSize="36sp"
        android:transitionName="tag_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.315" />

    <TextView
        android:id="@+id/roll_in"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/roll_in"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <EditText
        android:id="@+id/fmaily_id_entered"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="Family ID"
        android:transitionName="family_id"
        android:inputType="textPersonName"
        android:soundEffectsEnabled="true"
        android:textColor="@android:color/primary_text_light"
        android:textColorHighlight="#626262"
        android:textColorLink="#626262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.155"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/req_pass"
        android:layout_width="258dp"
        android:layout_height="46dp"
        android:ems="10"
        android:fontFamily="@font/audiowide"
        android:hint="Password"
        android:inputType="textPassword"
        android:transitionName="password"
        android:textColor="@android:color/primary_text_light"
        android:textColorHighlight="#626262"
        android:textColorHint="#8C8C8C"
        android:textColorLink="#626262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        app:passwordToggleEnabled="true" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="171dp"
        android:layout_height="36dp"
        android:fontFamily="@font/audiowide"
        android:text="Remember Me /"
        android:textColor="#666666"
        android:textColorHighlight="#626262"
        android:textColorLink="#626262"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.738" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/audiowide"
        android:text="forget password?"
        android:textColor="#626262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/audiowide"
        android:onClick="login_user"
        android:text="ROLL IN"
        android:textColor="#626262"
        android:textSize="24sp"
        android:transitionName="signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.864" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/audiowide"
        android:text="New Clan?"
        android:textColor="#626262"
        android:textSize="24sp"
        android:transitionName="signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>